startup-landing-page-clone: styles to align navbar correctly

--- a/startup-landing-page-clone/css/style.css
+++ b/startup-landing-page-clone/css/style.css
@@ -440,10 +440,6 @@ div {
 /* Navigation */
 .top-navigation {
     background-color: #fff;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    color: #838994;
-    letter-spacing: 0.03em;
 }
 .top-navigation > .content {
     width: 970px;
@@ -453,8 +449,15 @@ div {
 }
 .logo {
   margin-top: 18px;
+  margin-left: 14px;
 }
 .top-navigation .links li {
-  float: right;
   display: inline-block;
+}
+.top-navigation .links {
+  float: right;
+  font-family: 'Roboto', sans-serif;
+  color: #838994;
+  font-size: 16px;
+  margin-top: 25px;
 }
